--- a/idea/vara-eth/frontend/src/features/activity/ui/activity.module.scss
+++ b/idea/vara-eth/frontend/src/features/activity/ui/activity.module.scss
@@ -4,6 +4,8 @@
 
   &.open {
     flex: 1;
+
+    min-height: 256px;
   }
 }
 
