--- a/idea/vara-eth/frontend/src/features/sails/components/sails-program-actions/sails-program-actions.module.scss
+++ b/idea/vara-eth/frontend/src/features/sails/components/sails-program-actions/sails-program-actions.module.scss
@@ -3,5 +3,5 @@
 }
 
 .list {
-  margin: 0 -24px;
+  overflow-y: auto;
 }
